--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Belhsan12.github.io/me",
+  "homepage": "https://Belhsan12.github.io/my",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
